# Individual-tree-segmentation-based-on-oriented-search-

./: .gitattributes  .gitignore  README.md  Readme.docx
Main/: CMakeLists.txt  Code.cpp
